--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@uiw/react-codemirror": "^4.21.21",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "comlink": "^4.4.1",
+    "ethers": "^6.13.1",
     "isomorphic-git": "^1.25.10",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
+    "qr-scanner": "^1.4.2",
     "qrcode-generator": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
