--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "comlink": "^4.4.1",
     "isomorphic-git": "^1.25.10",
+    "mime-db": "^1.52.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
