--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "isomorphic-git": "^1.25.10",
     "mime-db": "^1.52.0",
     "palette-generator": "^1.1.0",
+    "pdfjs-dist": "^4.7.76",
     "peerjs": "^1.5.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
