--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.10",
     "vite-plugin-comlink": "^4.0.3",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-pwa": "^0.20.0",
     "workbox-core": "^7.1.0"
