--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qrcode-generator": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "slugify": "^1.6.6",
     "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
